# ft-media

./: CMakeLists.txt  CmakeLists.txt  main.cpp  readme.md
ft-media-lib/: CmakeLists.txt  mediaplayer.cpp  mediaplayer.h  server.cpp  server.h  utils.cpp  utils.h
